# APMODE

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  HANDOFF_NCA_PHASE345.md  LICENSE  PRD_APMODE_v0.2.md  PRD_APMODE_v0.3.md  README.md  pyproject.toml  pyrightconfig.json
.claude/skills/apmode/: SKILL.md
.github/workflows/: ci.yml  release.yml  suite_c_phase1.yml
.plans/: rocrate-v0.6.md  v0.5.0_limitations_closure.md
.plans/review/: brief.md
benchmarks/datasets/: registry.yaml
benchmarks/datasets/ddmore_gentamicin/: prepare.py
benchmarks/datasets/mimic_vancomycin/: README.md
benchmarks/datasets/nlmixr2data_mavoglurant/: prepare.R
benchmarks/datasets/nlmixr2data_schoemaker/: prepare.R
benchmarks/datasets/nlmixr2data_theophylline/: prepare.R
benchmarks/datasets/nlmixr2data_warfarin/: prepare.R
benchmarks/datasets/opentci_propofol/: prepare.R
benchmarks/suite_a/: README.md  a1_1cmt_oral_linear.csv  a2_2cmt_iv_parallel_mm.csv  a4_1cmt_oral_mm.csv  a8_1cmt_tvcl_covariate.csv  reference_params.json  simulate_all.R
benchmarks/suite_b/: README.md
benchmarks/suite_c/: README.md  gentamicin_germovsek_2017.dsl.json  gentamicin_germovsek_2017.yaml  mavoglurant_wendling_2015.dsl.json  mavoglurant_wendling_2015.yaml  oral_1cpt_acop_2016.dsl.json  oral_1cpt_acop_2016.yaml  phase1_npe_inputs.json  phenobarbital_grasela_1985.dsl.json  phenobarbital_grasela_1985.yaml  schoemaker_nlmixr2_tutorial.dsl.json  schoemaker_nlmixr2_tutorial.yaml  theophylline_boeckmann_1992.dsl.json  theophylline_boeckmann_1992.yaml  vancomycin_roberts_2011.dsl.json  vancomycin_roberts_2011.yaml  warfarin_funaki_2018.dsl.json  warfarin_funaki_2018.yaml
docs/: ARCHITECTURE.md  FORMULAR.md  FREM_BENCHMARK_RESULTS.md  NEXT_SESSION_PROMPT.md  PROFILER_REFINEMENT_PLAN.md
docs/adr/: 0001-review-deferrals.md  0003-sota-absorption-extension.md
docs/discovery/: eleveld_propofol_coverage.md
docs/plans/: 2026-04-13-phase1-month2-3-classical-nlme-backend.md  2026-04-13-phase1-month2-3-classical-nlme-backend.md.tasks.json  2026-04-13-phase2-node-discovery-lane.md  2026-04-13-phase2-node-discovery-lane.md.tasks.json  2026-04-14-deep-inspection-cli.md  2026-04-14-phase2-bayesian-backend.md  2026-04-14-phase3-agentic-llm-backend.md  2026-04-14-phase3-agentic-llm-backend.md.tasks.json  2026-04-14-phase3-remaining.md
notebooks/: colab_node_quickstart.ipynb
policies/: discovery.json  optimization.json  profiler.json  submission.json
scripts/: bayesian_smoke_theophylline.py  benchmark_frem_sweep.py  check_eleveld_dslspec_coverage.py  check_typer_exit_count.py  profile_smoke_test.py  run_full_benchmark.sh  sync_readme.py  typer_exit_baseline.json
src/apmode/: __init__.py  __main__.py  _json_ctx.py  _version.py  _version_drift.py  cli.py  cli_completion.py  cli_errors.py  errors.py  ids.py  logging.py  paths.py  routing.py
src/apmode/api/: __init__.py  app.py  models.py  routes.py  runs.py  store.py
src/apmode/backends/: __init__.py  agentic_runner.py  bayesian_runner.py  diagnostic_summarizer.py  frem_runner.py  llm_client.py  llm_providers.py  nlmixr2_runner.py  node_constraints.py  node_distillation.py  node_init.py  node_model.py  node_ode.py  node_runner.py  node_trainer.py  predictive_summary.py  process_lifecycle.py  protocol.py  r_schemas.py  saem_progress.py  transform_parser.py
src/apmode/bayes/: harness.py  platform.py  prior_data_conflict.py  prior_sensitivity.py
src/apmode/benchmarks/: __init__.py  literature_loader.py  models.py  perturbations.py  scoring.py  suite_a.py  suite_a_external.py  suite_b.py  suite_b_cli.py  suite_b_extended.py  suite_b_runner.py  suite_c.py  suite_c_phase1_cli.py  suite_c_phase1_runner.py  suite_c_phase1_scoring.py  suite_c_phase2_synthetic.py
src/apmode/bundle/: __init__.py  emitter.py  models.py  scoring_contract.py
src/apmode/data/: __init__.py  adapters.py  categorical_encoding.py  datasets.py  dosing.py  imputers.py  ingest.py  initial_estimates.py  missing_data.py  policy.py  profiler.py  schema.py  splitter.py  types.py
src/apmode/dsl/: __init__.py  _emitter_utils.py  ast_models.py  grammar.py  (+10 more)
src/r/: README.md
tests/: conftest.py
tests/golden/: test_nlmixr2_golden.py
tests/integration/: test_agentic_e2e.py  test_api_runs.py  test_blq_integration.py  test_discovery_lane.py  test_e2e_mock_r.py  test_gate3_contract_enforcement.py  test_llm_providers_live.py  test_loro_orchestrator.py  test_node_real_data.py  test_orchestrator_bayesian_dispatch.py  test_rocrate_export_validate.py  test_rocrate_suite_a_smoke.py  test_scoring_integration.py  test_suite_a_external_integration.py  test_suite_a_integration.py  test_suite_b_extended_integration.py  test_suite_b_integration.py  test_suite_b_new_perturbations.py  test_suite_c_bayesian.py  test_suite_c_integration.py  test_suite_c_phase1_mle.py
tests/property/: test_compiler_roundtrip.py  test_dsl_property.py  test_loro_fold_properties.py  test_loro_property.py  test_transform_properties.py
tests/unit/: test_agentic_prompts.py  test_agentic_runner.py  test_agentic_trace_emitter.py  test_approximate_posterior.py  test_backend_protocol.py  test_bayes_harness_config.py  test_bayes_harness_convergence.py  test_bayes_harness_data.py  test_bayes_loo.py  test_bayes_platform.py  test_bayesian_harness_predictive.py  test_bayesian_runner.py  test_benchmark_simulation.py  test_benchmark_suite_a.py  test_benchmark_suite_a_ci.py  test_bundle_emitter.py  test_bundle_emitter_full.py  test_bundle_mcmc_diag.py  test_bundle_models.py  test_bundle_posterior_draws.py  test_bundle_posterior_summary.py  test_bundle_prior_manifest.py  test_categorical_encoding.py  test_cli.py  test_cli_errors.py  test_cli_main_entrypoint.py  test_credibility_report.py  test_cross_paradigm_ranking.py  test_data_adapters.py  test_data_ingest.py  test_data_profiler.py  test_data_schema.py  test_data_splitter.py  test_decay_forms.py  test_deep_inspect.py  test_diagnostic_summarizer.py  test_dosing.py  test_dsl_grammar.py  test_dsl_transforms.py  test_dsl_v07_absorption.py  (+73 more)
(+86 files in other folders)
