# SPDX-License-Identifier: GPL-2.0-or-later
# Copyright (C) 2026 APMODE Contributors

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apmode"
version = "0.1.0"
description = "Adaptive Pharmacokinetic Model Discovery Engine"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "GPL-2.0-or-later"
authors = [{ name = "APMODE Contributors" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "lark>=1.2",
    "pydantic>=2.7",
    "pandera>=0.18",
    "sparkid>=0.2",
    "typer>=0.12",
    "structlog>=24.1",
    "tenacity>=8.3",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "numpy>=1.25",
    "pandas>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "syrupy>=4.0",
    "pytest-asyncio>=0.23",
    "pandas>=2.0",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
apmode = "apmode.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/apmode"]

[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "SIM",       # flake8-simplify
    "TCH",       # flake8-type-checking
    "RUF",       # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TCH001", "TCH003", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["apmode"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sparkid.*", "pandera.*", "lark.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
