# SPDX-License-Identifier: GPL-2.0-or-later
# Copyright (C) 2026 Biostochastics (Sergey Kornilov)

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "apmode"
dynamic = ["version"]
description = "Adaptive Pharmacokinetic Model Discovery Engine"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "GPL-2.0-or-later"
authors = [{ name = "Sergey Kornilov", email = "sergey.kornilov@biostochastics.com" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "lark>=1.2",
    "pydantic>=2.7",
    "pandera>=0.18",
    "sparkid>=0.2",
    "typer>=0.12",
    "structlog>=24.1",
    "numpy>=1.25",
    "pandas>=2.0",
    "rich>=13.0",
    "scipy>=1.11",
    "rocrate>=0.13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
node = [
    "jax[cpu]>=0.4.30",
    "diffrax>=0.6",
    "equinox>=0.11",
    "optax>=0.2",
    "jaxtyping>=0.2",
]
test = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "hypothesis>=6.100",
    "syrupy>=4.0",
    "pytest-asyncio>=0.23",
    "pandas>=2.0",
    "jax[cpu]>=0.4.30",
    "diffrax>=0.6",
    "equinox>=0.11",
    "optax>=0.2",
    "jaxtyping>=0.2",
]
llm = [
    "anthropic>=0.39",
    "openai>=1.50",
    "google-genai>=1.0",
    "ollama>=0.4",
    "litellm>=1.50",
]
bayesian = [
    "cmdstanpy>=1.2",
    "arviz>=0.17",
    "pyarrow>=15.0",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.19",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[project.scripts]
apmode = "apmode.cli:app"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.5.0-rc1"

[tool.hatch.build.hooks.vcs]
version-file = "src/apmode/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/apmode"]

[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 99
# _version.py is regenerated on every build by hatch-vcs with an
# unsorted __all__ (RUF022) that would trip ruff on fresh CI checkouts.
extend-exclude = ["src/apmode/_version.py"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "SIM",       # flake8-simplify
    "TCH",       # flake8-type-checking
    "RUF",       # ruff-specific
    "A",         # flake8-builtins (shadowing)
]
ignore = [
    # Typer command callbacks legitimately shadow builtins like ``format``
    # and ``type`` in keyword-argument position; enforcing A002/A003 would
    # require renaming option labels seen by users.
    "A002",
    "A003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TCH001", "TCH003", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["apmode"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sparkid.*", "pandera.*", "lark.*", "jax.*", "jaxlib.*", "diffrax.*", "equinox.*", "optax.*", "jaxtyping.*", "pandas.*", "cmdstanpy.*", "arviz.*", "pyarrow.*", "scipy.*", "aiosqlite.*", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "live: marks tests that call live LLM APIs (deselect with '-m \"not live\"')",
]
filterwarnings = [
    "ignore:os.fork\\(\\) was called.*JAX is multithreaded:RuntimeWarning",
]

[dependency-groups]
dev = [
    "roc-validator>=0.8.1",
]
